// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Demo /> renders an error if loading failed 1`] = `
<div
  className="Demo"
>
  <p>
    Oops, Failed to load list!
  </p>
</div>
`;

exports[`<Demo /> renders the <UserList /> if loading was successful 1`] = `
<div
  className="Demo"
>
  <div
    className="UserList"
  >
    <h4>
      User List
    </h4>
    <ul>
      <li>
        <a
          href="/UserInfo/1"
          onClick={[Function]}
        >
          Welly
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<Demo /> renders the loading status if data invalid 1`] = `
<div
  className="Demo"
>
  <p>
    Loading...
  </p>
</div>
`;

exports[`<Demo /> renders the loading status if requesting data 1`] = `
<div
  className="Demo"
>
  <p>
    Loading...
  </p>
</div>
`;
